--- a/shopping_mall/src/main/resources/templates/order/orderCheckout.html
+++ b/shopping_mall/src/main/resources/templates/order/orderCheckout.html
@@ -46,12 +46,11 @@
             var count = obj.value;
             var cartItemId = obj.id.split('_')[1];
             var price = $("#price_" + cartItemId).data("price");
-            var totalPrice = count*price;
-            $("#totalPrice_" + cartItemId).html(totalPrice+"원");
+            var totalPrice = count * price;
+            $("#totalPrice_" + cartItemId).html(totalPrice + "원");
             getOrderTotalPrice();
             updateCartItemCount(cartItemId, count);
         }
-
 
         // 상품 수량 변경 DB 적용을 위해 "/cartItem/{cartItemId}?count=value" 요청
         function updateCartItemCount(cartItemId, count){
@@ -103,7 +102,8 @@
                 dataType : "json",
                 cache   : false,
                 success  : function(result, status){
-                    location.href='/cart';
+                    // location.href='/cart';
+                    location.href='/checkout';
                 },
                 error : function(jqXHR, status, error){
 
@@ -119,7 +119,7 @@
         }
 
         // 장바구니 상품(들) 주문
-        function orders(){
+        function orders() {
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
 
@@ -128,9 +128,16 @@
             var dataList = new Array();
             var paramData = new Object();
 
-            $("input[name=cartChkBox]:checked").each(function() {
+            var orderTotalPrice = 0;
+
+            $("input[name=cartChkBox]:checked").each(function () {
                 var cartItemId = $(this).val();
                 var data = new Object();
+
+                var price = $("#price_" + cartItemId).attr("data-price");
+                var count = $("#count_" + cartItemId).val();
+                orderTotalPrice += price * count;
+
                 data["cartItemId"] = cartItemId;
                 dataList.push(data);
             });
@@ -138,6 +145,13 @@
             paramData['cartOrderDtoList'] = dataList;
 
             var param = JSON.stringify(paramData);
+
+            if (orderTotalPrice == 0) {
+                alert("상품을 최소 1개 이상 주문해야 합니다.");
+                // location.href="/cart";
+                location.href='/checkout';
+                return false;
+            }
 
             $.ajax({
                 url      : url,
@@ -187,80 +201,109 @@
             height:100px;
             width:100px;
         }
-        .fs18{
-            font-size:18px
-        }
         .fs24{
-            font-size:24px
+            font-size:18px
         }
     </style>
 </th:block>
 
 <div layout:fragment="content" class="content-mg">
-    <h2 class="mb-4">
-        장바구니 목록
-    </h2>
-
+    <h2 class="mb-4">장바구니 목록</h2>
     <div>
         <table class="table">
             <colgroup>
+                <col width="5%"/>
+                <col width="45%"/>
                 <col width="15%"/>
-                <col width="70%"/>
                 <col width="15%"/>
+                <col width="20%"/>
             </colgroup>
             <thead>
-            <tr class="text-center">
-                <td>
-                    <input type="checkbox" id="checkall" onclick="checkAll()"> 전체선택
-                </td>
-                <td>상품정보</td>
-                <td>상품금액</td>
-            </tr>
+                <tr class="text-center">
+                    <td><input type="checkbox" id="checkall" onclick="checkAll()"></td>
+                    <td>Product</td>
+                    <td>Price</td>
+                    <td>Quantity</td>
+                    <td>Total</td>
+                </tr>
             </thead>
             <tbody>
-            <tr th:each="cartItem : ${cartItems}">
-                <td class="text-center align-middle">
-                    <input type="checkbox" name="cartChkBox" th:value="${cartItem.cartItemId}">
-                </td>
-                <td class="d-flex">
-                    <div class="repImgDiv align-self-center">
-                        <img th:src="${cartItem.imgUrl}" class="rounded repImg" th:alt="${cartItem.itemName}">
-                    </div>
-                    <div class="align-self-center">
-                        <span th:text="${cartItem.itemName}" class="fs24 font-weight-bold"></span>
-                        <div class="fs18 font-weight-light">
-                            <span class="input-group mt-2">
-                                <span th:id="'price_' + ${cartItem.cartItemId}"
-                                      th:data-price="${cartItem.price}"
-                                      th:text="${cartItem.price} + '원'" class="align-self-center mr-2">
-                                </span>
-                                <input type="number" name="count" th:id="'count_' + ${cartItem.cartItemId}"
-                                       th:value="${cartItem.count}" min="1" th:max="${cartItem.count}"
-                                       onchange="changeCount(this)" class="form-control mr-2">
-                                <button type="button" class="close" aria-label="Close">
-                                    <span aria-hidden="true" th:data-id="${cartItem.cartItemId}"
-                                          onclick="deleteCartItem(this)">&times;</span>
-                                </button>
-                            </span>
+                <tr th:each="cartItem : ${cartItems}">
+                    <td class="text-center align-middle">
+                        <input type="checkbox" name="cartChkBox" th:value="${cartItem.cartItemId}">
+                    </td>
+                    <td class="d-flex">
+                        <div class="repImgDiv align-self-center">
+                            <img th:src="${cartItem.imgUrl}" class="rounded repImg" th:alt="${cartItem.itemName}">
                         </div>
-                    </div>
-                </td>
-                <td class="text-center align-middle">
-                    <span th:id="'totalPrice_' + ${cartItem.cartItemId}"
-                          name="totalPrice" th:text="${cartItem.price * cartItem.count} + '원'">
-                    </span>
-                </td>
-            </tr>
+                        <div class="align-self-center">
+                            <span th:text="${cartItem.itemName}" class="fs24 font-weight-bold"></span>
+                        </div>
+                    </td>
+                    <td class="text-center align-middle">
+                        <span th:id="'price_' + ${cartItem.cartItemId}" th:data-price="${cartItem.price}"
+                              th:text="${cartItem.price} + '원'" class="align-self-center mr-2">
+                        </span>
+                    </td>
+                    <td class="text-center align-middle">
+                        <input type="number" name="count" th:id="'count_' + ${cartItem.cartItemId}"
+                               th:value="${cartItem.count}" min="1" onchange="changeCount(this)"
+                               class="form-control" style="width: 70%; margin: 0 auto">
+                    </td>
+                    <td class="text-center align-middle">
+                        <span th:id="'totalPrice_' + ${cartItem.cartItemId}"
+                              name="totalPrice" th:text="${cartItem.price * cartItem.count} + '원'">
+                        </span>
+                    </td>
+                </tr>
             </tbody>
+            <tr class="text-right">
+                <td colspan="5">Total Price</td>
+            </tr>
+            <tr class="text-right">
+                <td colspan="5"><span id="orderTotalPrice" class="text-danger">0원</span></td>
+            </tr>
         </table>
 
-        <h2 class="text-center">
-            총 주문 금액 : <span id="orderTotalPrice" class="text-danger">0원</span>
-        </h2>
-
         <div class="text-center mt-3">
-            <button type="button" class="btn btn-primary btn-lg" onclick="orders()">주문하기</button>
+            <button type="button" class="btn btn-outline-success btn-lg" onclick="orders()">주문하기</button>
+            <a class="btn btn-outline-danger btn-lg" href="/cart" role="button">이전으로</a>
         </div>
     </div>
+
+    <form action="#" role="form" method="post" th:object="${joinFormDto}" id="join_form">
+        <div class="form-group">
+            <label th:for="name">이름</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
+            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <label th:for="email">이메일</label>
+            <input id="email" type="email" th:field="*{email}" class="form-control email" placeholder="이메일을 입력해주세요">
+            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <label th:for="phone">전화번호</label>
+            <input type="text" th:field="*{phone}" class="form-control" placeholder="전화번호를 입력해주세요">
+            <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <label th:for="zipcode">주소</label>
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{zipcode}" style="width: 40%; display: inline;" class="form-control" placeholder="우편번호" readonly="readonly">
+            <button type="button" class="btn btn-light" onclick="execPostCode()">우편번호 찾기</button>
+            <p th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{city}" class="form-control" placeholder="도로명 주소" readonly="readonly">
+            <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <input type="text" th:field="*{street}" class="form-control" placeholder="상세 주소">
+            <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="fieldError">Incorrect data</p>
+        </div>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+    </form>
 </div>
 </html>
