--- a/shopping_mall/src/main/resources/templates/item/itemDetail.html
+++ b/shopping_mall/src/main/resources/templates/item/itemDetail.html
@@ -68,7 +68,8 @@
       var token = $("meta[name='_csrf']").attr("content");
       var header = $("meta[name='_csrf_header']").attr("content");
 
-      var url = "/cart";
+      // var url = "/cart";
+      var url = "/checkout";
       var paramData = {
         itemId : $("#itemId").val(),
         count : $("#count").val()
@@ -88,7 +89,8 @@
         cache   : false,
         success  : function(result, status){
           alert("상품을 장바구니에 담았습니다.");
-          location.href='/';
+          // location.href='/checkout';
+          location.href='/cart';
         },
         error : function(jqXHR, status, error){
           if(jqXHR.status === '401'){
