--- a/shopping_mall/src/main/resources/templates/item/itemForm.html
+++ b/shopping_mall/src/main/resources/templates/item/itemForm.html
@@ -96,7 +96,7 @@
       <div class="form-group" th:each="num: ${#numbers.sequence(1,5)}">
         <div class="custom-file img-div">
           <input type="file" class="custom-file-input" name="itemImgFile">
-          <label class="custom-file-label" th:text="상품이미지 + ${num}"></label>
+          <label class="custom-file-label" th:text="Image + ${num}"></label>
         </div>
       </div>
     </div>
@@ -119,9 +119,7 @@
       <button th:formaction="@{'/admin/item/' + ${itemFormDto.id}}" type="submit" class="btn btn-primary">수정</button>
     </div>
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-
   </form>
-
 </div>
 
 </html>
