--- a/shopping_mall/src/main/resources/templates/member/loginForm.html
+++ b/shopping_mall/src/main/resources/templates/member/loginForm.html
@@ -18,7 +18,7 @@
 <div layout:fragment="content">
     <form role="form" method="post" action="/member/login" id="login_form">
         <div class="form-group">
-            <label th:for="email">이메일주소</label>
+            <label th:for="email">이메일</label>
             <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
         </div>
         <div class="form-group">
