--- a/shopping_mall/src/main/resources/templates/order/orderCheckout.html
+++ b/shopping_mall/src/main/resources/templates/order/orderCheckout.html
@@ -34,9 +34,9 @@
         // 전체선택 또는 전체해제
         function checkAll(){
             if($("#checkall").prop("checked")){
-                $("input[name=cartChkBox]").prop("checked",true);
+                $("input[name=cartChkBox]").prop("checked", true);
             }else{
-                $("input[name=cartChkBox]").prop("checked",false);
+                $("input[name=cartChkBox]").prop("checked", false);
             }
             getOrderTotalPrice();
         }
@@ -70,40 +70,6 @@
                 cache   : false,
                 success  : function(result, status){
                     console.log("cartItem count update success");
-                },
-                error : function(jqXHR, status, error){
-
-                    if(jqXHR.status == '401'){
-                        alert('로그인 후 이용해주세요');
-                        location.href='/members/login';
-                    } else{
-                        alert(jqXHR.responseJSON.message);
-                    }
-
-                }
-            });
-        }
-
-        // 장바구니 삭제 요청
-        function deleteCartItem(obj){
-            var cartItemId = obj.dataset.id;
-            var token = $("meta[name='_csrf']").attr("content");
-            var header = $("meta[name='_csrf_header']").attr("content");
-
-            var url = "/cartItem/" + cartItemId;
-
-            $.ajax({
-                url      : url,
-                type     : "DELETE",
-                beforeSend : function(xhr){
-                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
-                    xhr.setRequestHeader(header, token);
-                },
-                dataType : "json",
-                cache   : false,
-                success  : function(result, status){
-                    // location.href='/cart';
-                    location.href='/checkout';
                 },
                 error : function(jqXHR, status, error){
 
@@ -265,45 +231,62 @@
             </tr>
         </table>
 
+        <form action="#" role="form" method="post" th:object="${joinFormDto}" id="join_form">
+            <h3>배송 정보</h3>
+            <div class="form-group" style="margin-top: 30px;">
+                <label th:for="name">이름</label>
+                <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
+                <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+                <label th:for="email">이메일</label>
+                <input id="email" type="email" th:field="*{email}" class="form-control email" placeholder="이메일을 입력해주세요">
+                <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+                <label th:for="phone">연락처</label>
+                <input type="text" th:field="*{phone}" class="form-control" placeholder="전화번호를 입력해주세요">
+                <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+                <label th:for="zipcode">배송지</label>
+            </div>
+            <div class="form-group">
+                <input type="text" th:field="*{zipcode}" style="width: 40%; display: inline;" class="form-control" placeholder="우편번호" readonly="readonly">
+                <button type="button" class="btn btn-light" onclick="execPostCode()">우편번호 찾기</button>
+                <p th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+                <input type="text" th:field="*{city}" class="form-control" placeholder="도로명 주소" readonly="readonly">
+                <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+                <input type="text" th:field="*{street}" class="form-control" placeholder="상세 주소">
+                <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="fieldError">Incorrect data</p>
+            </div>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        </form>
+
+        <div style="margin-top: 50px;">
+            <fieldset>
+                <h3>결제수단 선택</h3>
+                <div>
+                    <input type="radio" id="contactChoice1" name="contact" value="email" />
+                    <label for="contactChoice1">신용카드</label>
+
+                    <input type="radio" id="contactChoice2" name="contact" value="phone" />
+                    <label for="contactChoice2">무통장입금</label>
+
+                    <input type="radio" id="contactChoice3" name="contact" value="mail" />
+                    <label for="contactChoice3">Paypal</label>
+                </div>
+            </fieldset>
+        </div>
+
         <div class="text-center mt-3">
             <button type="button" class="btn btn-outline-success btn-lg" onclick="orders()">주문하기</button>
             <a class="btn btn-outline-danger btn-lg" href="/cart" role="button">이전으로</a>
         </div>
     </div>
-
-    <form action="#" role="form" method="post" th:object="${joinFormDto}" id="join_form">
-        <div class="form-group">
-            <label th:for="name">이름</label>
-            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
-            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
-        </div>
-        <div class="form-group">
-            <label th:for="email">이메일</label>
-            <input id="email" type="email" th:field="*{email}" class="form-control email" placeholder="이메일을 입력해주세요">
-            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
-        </div>
-        <div class="form-group">
-            <label th:for="phone">전화번호</label>
-            <input type="text" th:field="*{phone}" class="form-control" placeholder="전화번호를 입력해주세요">
-            <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError">Incorrect data</p>
-        </div>
-        <div class="form-group">
-            <label th:for="zipcode">주소</label>
-        </div>
-        <div class="form-group">
-            <input type="text" th:field="*{zipcode}" style="width: 40%; display: inline;" class="form-control" placeholder="우편번호" readonly="readonly">
-            <button type="button" class="btn btn-light" onclick="execPostCode()">우편번호 찾기</button>
-            <p th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}" class="fieldError">Incorrect data</p>
-        </div>
-        <div class="form-group">
-            <input type="text" th:field="*{city}" class="form-control" placeholder="도로명 주소" readonly="readonly">
-            <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="fieldError">Incorrect data</p>
-        </div>
-        <div class="form-group">
-            <input type="text" th:field="*{street}" class="form-control" placeholder="상세 주소">
-            <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}" class="fieldError">Incorrect data</p>
-        </div>
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-    </form>
 </div>
 </html>
